# Hydra-GNN

./: .gitignore  README.md  check_hydra_mp3d.ipynb  debug_utils.py  dsg_dataset.ipynb  dsg_htree_construction.ipynb  dsg_processing.ipynb  prepare_Stanford3DSG_for_training.py  prepare_hydra_mp3d_training.py  pyproject.toml  requirements.txt  run_mp3d_model.ipynb  setup.cfg  train.ipynb  train_Stanford.py  train_mp3d.py
config/: Stanford3DSG_default_config.yaml  Stanford3DSG_htree_config.yaml  mp3d_default_config.yaml  mp3d_htree_config.yaml
config_Stanford3D/: baseline_GAT.yaml  baseline_GAT_edge.yaml  baseline_GCN.yaml  baseline_GIN.yaml  baseline_GraphSAGE.yaml  baseline_hetero_GAT.yaml  baseline_hetero_GAT_edge.yaml  htree_GAT.yaml  htree_GAT_edge.yaml  htree_GCN.yaml  htree_GIN.yaml  htree_GraphSAGE.yaml  htree_hetero_GAT.yaml  htree_hetero_GAT_edge.yaml
config_mp3d/: baseline_gt20.yaml  baseline_gt30.yaml  baseline_gt40.yaml  baseline_gt50.yaml  baseline_gt60.yaml  baseline_gt60_noRE.yaml  baseline_gt60_noW.yaml  baseline_gt60_noW_noRE.yaml  htree_gt20.yaml  htree_gt30.yaml  htree_gt40.yaml  htree_gt50.yaml  htree_gt60.yaml  htree_gt60_noRE.yaml  htree_gt60_noW.yaml  htree_gt60_noW_noRE.yaml
data/: Stanford3DSG.pkl  colormap.csv
data_analysis/: objects.ipynb  objects.py  rooms.ipynb  rooms.py
data_files/: mpcat40.tsv
datasets/: mp3d.py
hydra_gnn/: Stanford3DSG_dataset.py  base_training_job.py  mp3d.py  mp3d_dataset.py  mp3d_utils.py  preprocess_dsgs.py  semisupervised_training_job.py  utils.py
neural_tree/: construct.py
notebooks/: dsg_processing.py  (+5 more)
(+59 files in other folders)
