[options]
packages = find:
include_package_data = True
install_requires =
    gensim
    pandas
    networkx
    torch
    torch_geometric
    spark_dsg @ git+https://github.com/MIT-SPARK/Spark-DSG.git@main

[options.packages.find]
where=src

[flake8]
max-line-length = 88
extend-ignore = E203,D301
per-file-ignores =
    *__init__.py:F401,F403
