[options]
packages = find:
include_package_data = True
install_requires =
    click
    gensim
    networkx
    pandas
    plotly
    pyyaml
    spark_dsg @ git+https://github.com/MIT-SPARK/Spark-DSG.git@main
    tensorboardX
    torch
    torch_geometric

[options.packages.find]
where=src

[flake8]
max-line-length = 88
extend-ignore = E203,D301
per-file-ignores =
    *__init__.py:F401,F403
